tests/ui/parser/issue-103869.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `:`
  --> $DIR/issue-103869.rs:2:8
   |
LL | enum VecOrMap{
   |      -------- while parsing this enum
LL |     vec: Vec<usize>,
   |        ^ expected one of `(`, `,`, `=`, `{`, or `}`
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: aborting due to previous error

